# VIROC

./: README.md  pyproject.toml
.github/workflows/: bakeoff.yml  ci.yml
docs/: architecture.md  design.md  grammar-authoring.md  overview.md  vidir-spec.md
examples/: README.md
examples/rag-pipeline/: README.md  authoring-brief.yaml  authoring-request.yaml  scene-plan.yaml  script.md  storyboard.vidir.yaml  viroc.yaml
examples/showcase-composition/: README.md  authoring-brief.yaml  authoring-request.yaml  scene-plan.yaml  script.md  storyboard.vidir.yaml  viroc.yaml
examples/viroc-codebase/: README.md  authoring-brief.yaml  authoring-request.yaml  scene-plan.yaml  script.md  storyboard.vidir.yaml  viroc.yaml
experiments/adapters/: README.md  RESULTS.md  _sample.py
experiments/bakeoff/: .gitignore  README.md  RESULTS.md  RUBRIC.md  build_all.py  requirements.txt
src/viroc/: __init__.py
tests/fixtures/: bad-time.vidir.yaml  rag-overview.vidir.yaml  showcase-composition.vidir.yaml  viroc.yaml
tests/golden/: rag_pipeline_concrete.json  rag_pipeline_image_sequence_artifacts.json  rag_pipeline_layout.json  rag_pipeline_motion_canvas_project.json  rag_pipeline_remotion_project.json  rag_pipeline_scene.html  rag_pipeline_scene.py  rag_pipeline_static_storyboard_artifacts.json  showcase_composition_concrete.json  showcase_composition_layout.json  test_adapter_conformance.py  test_concrete_ir.py  test_html_emit.py  test_manim_emit.py  test_motion_canvas_emit.py  test_pipeline_layout.py  test_remotion_emit.py  test_review_adapters.py  test_showcase_concrete_ir.py  (+1 more)
(+196 files in other folders)
