[project]
name = "viroc"
version = "0.1.0"
description = "Typed, verifiable intermediate layer that compiles VidIR storyboards into deterministic technical-video source."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = []

[project.scripts]
viroc = "viroc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viroc"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
